src/test/ui/chalkify/impl_wf_2.stderr
error[E0277]: the trait bound `f32: Foo` is not satisfied
  --> $DIR/impl_wf_2.rs:25:5
   |
LL |     type Item: Foo;
   |                --- required by this bound in `Bar::Item`
...
LL |     type Item = f32;
   |     ^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `f32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
